--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015-riot": "^1.1.0",
+    "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^4.5.0",
     "rimraf": "2.6.1",
     "riot": "^3.3.2",
     "riot-route": "^3.1.0",
     "riotjs-loader": "^4.0.0",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.14.0",
     "unminified-webpack-plugin": "^1.2.0",
     "webpack": "^1.5.3",
     "webpack-merge": "^4.0.0"
