--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "rimraf build && webpack --colors --progress",
-    "production": "rimraf build && NODE_ENV=production webpack --colors --progress",
-    "watch": "webpack --watch --progress",
+    "prebuild": "rimraf build",
+    "build": "cross-env NODE_ENV=development webpack --colors --progress",
+    "postbuild": "node -e \"console.log('DEVELOPMENT build finish');\"",
+    "preproduction": "rimraf build",
+    "production": "cross-env NODE_ENV=production webpack --colors --progress",
+    "postproduction": "node -e \"console.log('PRODUCTION build finish');\"",
+    "watch": "cross-env NODE_ENV=development webpack --colors --watch --progress",
     "clean": "rimraf build"
   },
   "author": "",
@@ -15,6 +19,7 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015-riot": "^1.1.0",
+    "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^4.5.0",
