change webpack v1 to v2
# ==== Emojis ====
# 🐛  :bug: バグ修正
# 👍  :+1: 機能改善
# ✨  :sparkles: 部分的な機能追加
# 🎉  :tada: 盛大に祝うべき大きな機能追加
# ♻️  :recycle: リファクタリング
# 🚿  :shower: 不要な機能・使われなくなった機能の削除
# 💚  :green_heart: テストやCIの修正・改善
# 👕  :shirt: Lintエラーの修正やコードスタイルの修正
# 🚀  :rocket: パフォーマンス改善
# 🆙  :up: 依存パッケージなどのアップデート
# 🔒  :lock: 新機能の公開範囲の制限
# 👮  :cop: セキュリティ関連の改善

# ==== Format ====
# :emoji: Subject
#
# Commit body...

# ==== The Seven Rules ====
# 1. Separate subject from body with a blank line
# 2. Limit the subject line to 50 characters
# 3. Capitalize the subject line
# 4. Do not end the subject line with a period
# 5. Use the imperative mood in the subject line
# 6. Wrap the body at 72 characters
# 7. Use the body to explain what and why vs. how
#
# How to Write a Git Commit Message http://chris.beams.io/posts/git-commit/

# for http://memo.goodpatch.co/2016/07/beautiful-commits-with-emojis/

--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "babel-preset-es2015-riot": "^1.1.0",
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "node-sass": "^4.5.0",
     "rimraf": "2.6.1",
     "riot": "^3.3.2",
     "riot-route": "^3.1.0",
-    "riotjs-loader": "^4.0.0",
-    "sass-loader": "^4.1.1",
+    "riot-tag-loader": "^1.0.0",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.14.0",
     "unminified-webpack-plugin": "^1.2.0",
-    "webpack": "^1.5.3",
+    "webpack": "^2.2.1",
     "webpack-merge": "^4.0.0"
   }
 }
