--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "distZip": "node runscripts/distZip.js",
     "prebuild": "rimraf build",
     "build": "cross-env NODE_ENV=development webpack --colors --progress",
     "postbuild": "node -e \"console.log('DEVELOPMENT build finish');\"",
@@ -16,12 +17,15 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "archiver": "^1.3.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015-riot": "^1.1.0",
+    "cpx": "^1.5.0",
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
+    "mkdirp": "^0.5.1",
     "node-sass": "^4.5.0",
     "rimraf": "2.6.1",
     "riot": "^3.3.2",
@@ -32,5 +36,8 @@
     "unminified-webpack-plugin": "^1.2.0",
     "webpack": "^2.2.1",
     "webpack-merge": "^4.0.0"
+  },
+  "dependencies": {
+    "moment": "^2.17.1"
   }
 }
